--- a/TankGame/images.qrc
+++ b/TankGame/images.qrc
@@ -111,5 +111,6 @@
         <file>../sample/photo/honor/honor3_bg.png</file>
         <file>../sample/photo/honor/honor4_bg.png</file>
         <file>../sample/photo/label_bg .png</file>
+        <file>../build-TankGame-Desktop_Qt_5_13_0_MSVC2017_32bit-Debug/done.png</file>
     </qresource>
 </RCC>
